# videomemory

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.adminagent.yml  docker-compose.core.yml  docker-compose.eventmode.yml  docker-compose.openclaw.yml  docker-compose.real-openclaw.yml  docker-compose.replica.yml  docker-compose.simpleagent.yml  docker-compose.tailscale.yml  fly.toml  launch_openclaw_with_videomemory.sh  pyproject.toml  start.sh
.claude-plugin/: marketplace.json
admin_gateway_replica/: Dockerfile  README.md  __init__.py  app.py
android/: PLAY_STORE_CHECKLIST.md  PLAY_STORE_HANDOFF.md  README.md  build.gradle.kts  key.properties  settings.gradle.kts  upload-keystore.jks
apps/: rag_qa_app.py  webcam_captioner.py
captioners/: __init__.py  base.py  paligemma_captioner.py  qwen2vl_captioner.py  smolvlm_captioner.py
claude-videomemory-channel/: .mcp.json  README.md  package-lock.json  package.json  server.mjs
datasets/: __init__.py  requirements.txt  tvqa.py  tvqa_long.py
deploy/: demo_camera_server.py  export-admin-gateway-replica.sh  setup-pi.sh  setup-tailscale.sh  start-cloud.sh  start-with-mcp.sh  test-adminagent-stack.sh  test-e2e-suite.sh  test-eventmode-cloud.sh  test-eventmode-mcp.sh  test-openclaw-phone-demo.sh  test-openclaw-stack.sh  test-replica-stack-internal.sh  test-replica-stack.sh  test-simpleagent-stack.sh  up-adminagent-stack.sh  up-simpleagent-stack.sh  videomemory.service
docs/: agent-integration-contract.md  claude-code-channel.md  edge-cloud-architecture.md  install-videomemory.sh  launch-openclaw-real-tui.sh  launch-openclaw-real.sh  openclaw-architecture.md  openclaw-bootstrap.sh  openclaw-marketplace-release.md  openclaw-skill.md  openclaw-videomemory-task-helper.mjs  relaunch-videomemory.sh  release-checklist.md  update-manifest.json
examples/: README.md  VLM_demo.py  example_tvqa_dataset_usage.py
flask_app/: app.py
offline/: README.md
openclaw-plugin/: README.md  cli.mjs  index.mjs  openclaw.plugin.json  package-lock.json  package.json
prompt_hustle/: .gitignore  README.md  analysis.py  instructions.md  leaderboard.tsv  optimize.py  program.md  prompt.md  prompt_log.jsonl  results.tsv
(+269 files in other folders)
