[project]
name = "videomemory"
version = "0.1.6"
description = "Video memory ingestion and monitoring core"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "google-genai",
    "python-dotenv",
    "pyserial",
    "opencv-python",
    "pydantic",
    "streamlit",
    "openai",
    "anthropic",
    "httpx",
    "matplotlib",
    "flask",
    "pyobjc; sys_platform == 'darwin'",
    "cv2-enumerate-cameras>=1.3.3; sys_platform == 'darwin'",
    "greenlet>=3.2.4",
]

[project.optional-dependencies]
fastvlm = [
    "mlx; sys_platform == 'darwin'",
    "mlx-vlm; sys_platform == 'darwin'",
    "timm; sys_platform == 'darwin'",
    "torch; sys_platform == 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["videomemory"]

[dependency-groups]
dev = []
